oriterm_core/tests/vttest/snapshots/vttest__menu2__80x24_02_screen_02.snap
---
source: oriterm_core/tests/vttest/menu2.rs
expression: text
---
      *     *     *     *     *     *     *     *     *     *     *     *     * 
      *     *     *     *     *     *     *     *     *     *     *     *     * 
                                                                                
Test of TAB setting/resetting. These two lines                                  
should look the same. Push <RETURN>
