oriterm_core/tests/vttest/snapshots/vttest__menu2__80x24_02_screen_05.snap
---
source: oriterm_core/tests/vttest/menu2.rs
expression: text
---
12345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901 
                                                                                                                                    
  This is 132 column mode, dark background.                                                                                         
   This is 132 column mode, dark background.                                                                                        
    This is 132 column mode, dark background.                                                                                       
     This is 132 column mode, dark background.                                                                                      
      This is 132 column mode, dark background.                                                                                     
       This is 132 column mode, dark background.                                                                                    
        This is 132 column mode, dark background.                                                                                   
         This is 132 column mode, dark background.                                                                                  
          This is 132 column mode, dark background.                                                                                 
           This is 132 column mode, dark background.                                                                                
            This is 132 column mode, dark background.                                                                               
             This is 132 column mode, dark background.                                                                              
              This is 132 column mode, dark background.                                                                             
               This is 132 column mode, dark background.                                                                            
                This is 132 column mode, dark background.                                                                           
                 This is 132 column mode, dark background.                                                                          
                  This is 132 column mode, dark background.                                                                         
                   This is 132 column mode, dark background.Push <RETURN>
