oriterm_core/tests/vttest/snapshots/vttest__menu2__80x24_02_screen_07.snap
---
source: oriterm_core/tests/vttest/menu2.rs
expression: text
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
Push <RETURN>                                                                   
Soft scroll down region [12..13] size 2 Line 29
