oriterm_core/tests/vttest/snapshots/vttest__menu2__80x24_02_screen_08.snap
---
source: oriterm_core/tests/vttest/menu2.rs
expression: text
---
Push <RETURN>                                                                   
Soft scroll down region [1..24] size 24 Line 29                                 
Soft scroll down region [1..24] size 24 Line 28                                 
Soft scroll down region [1..24] size 24 Line 27                                 
Soft scroll down region [1..24] size 24 Line 26                                 
Soft scroll down region [1..24] size 24 Line 25                                 
Soft scroll down region [1..24] size 24 Line 24                                 
Soft scroll down region [1..24] size 24 Line 23                                 
Soft scroll down region [1..24] size 24 Line 22                                 
Soft scroll down region [1..24] size 24 Line 21                                 
Soft scroll down region [1..24] size 24 Line 20                                 
Soft scroll down region [1..24] size 24 Line 19                                 
Soft scroll down region [1..24] size 24 Line 18                                 
Soft scroll down region [1..24] size 24 Line 17                                 
Soft scroll down region [1..24] size 24 Line 16                                 
Soft scroll down region [1..24] size 24 Line 15                                 
Soft scroll down region [1..24] size 24 Line 14                                 
Soft scroll down region [1..24] size 24 Line 13                                 
Soft scroll down region [1..24] size 24 Line 12                                 
Soft scroll down region [1..24] size 24 Line 11                                 
Soft scroll down region [1..24] size 24 Line 10                                 
Soft scroll down region [1..24] size 24 Line 9                                  
Soft scroll down region [1..24] size 24 Line 8                                  
Soft scroll down region [1..24] size 24 Line 7
