oriterm_core/tests/vttest/snapshots/vttest__menu2__80x24_02_screen_09.snap
---
source: oriterm_core/tests/vttest/menu2.rs
expression: text
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
Push <RETURN>                                                                   
Jump scroll down region [12..13] size 2 Line 29
